# iklanlive-plugin

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  buildspec.json  cmake_install.cmake  iklanlive.qrc  install_manifest_obs_rundir.txt  linux-build.sh
.cmake/api/v1/reply/: cache-v2-6021d3d57a565fd369e0.json  cmakeFiles-v1-1f10c3ba7056c1897b32.json  codemodel-v2-018ae60be57379ea8322.json  directory-.-Debug-b61b3b192ed900b77402.json  directory-_deps.cpr-build-Debug-986957e010b46c5b5a64.json  directory-_deps.cpr-build.cpr-Debug-ecab826a98bc903118a4.json  directory-_deps.cpr-build.include-Debug-cd385efea866791494f9.json  directory-_deps.curl-build-Debug-47882880819294f82db1.json  directory-_deps.curl-build.lib-Debug-c07596f4a6960052cd3f.json  directory-_deps.zlib-build-Debug-4fab300017eef1a01c3e.json  index-2022-05-06T11-02-51-0188.json  target-cpr-Debug-5177eaf6626a0240177e.json  target-iklanlive-plugin-Debug-3d60c15d2664dde38f1f.json  target-iklanlive-plugin_autogen-Debug-2613673958430993a33b.json  target-iklanlive-plugin_autogen_timestamp_deps-Debug-331f08c01febebbe37bd.json  target-libcurl-Debug-61b629098c8de9837314.json  target-uninstall-Debug-9e7151b9895ba6db05f7.json  target-zlib-Debug-2e960beb427954707db2.json
.github/scripts/: .build.zsh
.github/workflows/: main.yml
iklanlive-plugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
iklanlive-plugin_autogen/EWIEGA46WW/: qrc_iklanlive.cpp
iklanlive-plugin_autogen/LOXWS6PXLU/: moc_LoginDialog.cpp  moc_LoginDialog.cpp.d
iklanlive-plugin_autogen/include/: ui_LoginDialog.h
logs/2022-05-04_request-and-parse/: log.md
src/: plugin-config.h  plugin-macros.h.in  plugin-main.cpp
src/api/Auth/: Login.cpp  Login.h  User.cpp  User.h
src/api/Config/: PluginConfig.cpp  PluginConfig.h  configable.h
src/api/Livestream/: Livestreams.h
src/component/: Menu.cpp  Menu.h
src/dialog/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui
src/exception/: AuthException.cpp  AuthException.h  BaseException.h  ConfigException.cpp  ConfigException.h  LivestreamException.cpp  LivestreamException.h
src/lib/Config/: FileLinuxConfig.cpp  FileLinuxConfig.h  FilePluginConfig.cpp  FilePluginConfig.h  FileWindowsConfig.cpp  FileWindowsConfig.h  PluginConfig.cpp  PluginConfig.h
src/lib/Observer/: Observer.cpp  Observer.h  ObserverInstance.cpp  ObserverInstance.h
src/scene/: ads_scene.cpp  ads_scene.h  types.h  util.cpp  util.h
